Fixed problem in code

--- a/style/hero.css
+++ b/style/hero.css
@@ -10,7 +10,7 @@
   background: #000000;
   color: #1ced09;
   font-family: "Tourney", sans-serif;
-  font-weight: bold
+  font-weight: bold;
   font-style: normal;
   font-weight: bold;
   font-size: 30px;
