--- a/style/main.css
+++ b/style/main.css
@@ -14,11 +14,11 @@ body {
   margin: 0;
   box-sizing: border-box;
   /* Customize colors! */
-  background: rgb(208, 180, 19);
+  background: rgb(175 150 107);;
   color: rgb(255, 255, 255);
 }
 h2 {
-  color: rgb(28, 237, 9);
+  color: rgb(117 231 92);
   text-decoration: underline;
   text-decoration-color: rgb(208, 180, 19);
   margin-bottom: 8px;
